--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077776.md#1" title="遭央视连骂三天 蓬佩奥反在中国人气飙升""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/Unknown-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12078752.md#1" title="调查世卫和中共关系 川普手握一张王牌""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/04/GettyImages-959790390-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/wdr216/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://wdr216.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081342.md#1">虐待殴打八旬老人 南通保姆被判刑</a><br>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080957.md#1">美东北7州建“区域采购联盟” 尽量选择美国制造</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080926.md#1">【现场视频】经历干旱冰雹后 云南又现日晕</a><br>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081164.md#1">美国号召19国空军视讯防疫 台湾在列</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080968.md#1">纽约市可当地生产病毒检测组 周产量达5万</a><br>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/4/30/n12073515.md#1">【瘟疫与中共】麻州亲共带来防疫漏洞</a><br>
+:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079010.md#1">【最新疫情5·4】川普：世卫是一场灾难</a><br>
+:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081342.md#1">虐待殴打八旬老人 南通保姆被判刑</a><br>
+:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080957.md#1">美东北7州建“区域采购联盟” 尽量选择美国制造</a><br>
+:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080926.md#1">【现场视频】经历干旱冰雹后 云南又现日晕</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081164.md#1">美国号召19国空军视讯防疫 台湾在列</a><br>
+:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080968.md#1">纽约市可当地生产病毒检测组 周产量达5万</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078278.md#1">【一线采访】北京新规 房地产恐面临倒闭潮</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078410.md#1">两会前“红二代”发信对掐？中南海博弈激烈</a><br>
@@ -26,9 +26,8 @@
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12078982.md#1">【翻墙必看】金正恩露面手腕惊现神秘疤痕</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12078979.md#1">金正恩右手现新疤痕 专家：或做了心脏手术</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12078123.md#1">网民借“潘金莲”讽刺中共推卸疫情责任</a><br>
-<a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077551.md#1">国际网红新影片 赞台湾独力抗疫是英雄</a><br>
-<a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077782.md#1">【现场视频】警察坐镇 沪强拆崧泽大道民房</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12080048.md#1">网传邓朴方公开信 红二代：代表部分人心声</a><br>
+<a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077782.md#1">【现场视频】警察坐镇 沪强拆崧泽大道民房</a><br>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077916.md#1">五角大厦新战略！南海频现美国机舰进出</a><br>
 <br><p align="center"><a href="https://github.com/wdr216/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079077.md#1">洪微：海外华人在瘟疫中学到了什么</a><br>
