--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -3,6 +3,7 @@
 
 1.遭央视谩骂的第二个美国人 班农说了啥？
 继美国国务......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
+<tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081208.md#1" target="_blank"><img width="220" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081208.md#1" target="_blank">许广高速连州段小车撞防护栏起火 5人遇难</a><br></h3>5月4日早上，许昌－广州高速公路（简称许广高速）连州市段，发生车祸......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081342.md#1" target="_blank"><img width="220" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081342.md#1" target="_blank">虐待殴打八旬老人 南通保姆被判刑</a><br></h3>江苏南通海安市曲塘镇80多岁的老人顾某生活无法自理，去年家人请了保......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080926.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/2020-05-04_13-57-56-320x200.jpg" align ="left"></a><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12080926.md#1" target="_blank">【现场视频】经历干旱冰雹后 云南又现日晕</a><br></h3>5月3日，云南丽江天空出现巨大的日晕现象，并持续约1个多小时。...<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081164.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/2005040217132378-320x200.jpg" align ="left"></a><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/4/n12081164.md#1" target="_blank">美国号召19国空军视讯防疫 台湾在列</a><br></h3>美国太平洋空军指出，司令布朗（CQ Brown Jr.）在夏威夷当......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
@@ -31,6 +32,5 @@
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079994.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/03/198209821b38888a1afe8c5a6fd4b140-320x200.jpg" align ="left"></a><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079994.md#1" target="_blank">疫情掀影业内战 片方转网络 影院坐困愁城</a><br></h3>“中共病毒”（武汉肺炎）肆虐全球，疫情导致“宅经济”相对发达。电影......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079965.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/04/1920px-Press_freedom_2020.svg_-320x200.png" align ="left"></a><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079965.md#1" target="_blank">世界新闻日 中共打压新闻自由殃及全球生命</a><br></h3>今年的世界新闻自由日，正值中共病毒（武汉肺炎，新冠病毒）在全球肆虐......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077776.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/Unknown-320x200.jpg" align ="left"></a><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/2/n12077776.md#1" target="_blank">遭央视连骂三天 蓬佩奥反在中国人气飙升</a><br></h3>中共央视连续三天对美国国务卿蓬佩奥进行泼妇式骂街，遭外界耻笑。大陆......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
-<tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079942.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/1-1-320x200.png" align ="left"></a><a href="https://github.com/wdr216/djy/blob/master/gb/20/5/3/n12079942.md#1" target="_blank">大众旗下品牌取消进中国计划 紧随全球趋势</a><br></h3>德国大众汽车旗下品牌、西班牙车企西亚特（Seat）改变原计划，决定......<br><img align="bottom" src="https://raw.githubusercontent.com/wdr216/www/master/t/ntdtv/time.gif">05月04日</td></tr>
 <tr><td><h3><a href="https://github.com/wdr216/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/wdr216/djy/blob/master/gb/nsc413_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/wdr216/djy/blob/master/gb/nsc413.md#1<br><a href="https://github.com/wdr216/djy/blob/master/gb/nsc413.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wdr216/djy/blob/master/gb/nsc413.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc413.htm">https://www.epochtimes.com/gb/nsc413.htm</a>    （国内需<a href="https://github.com/wdr216/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</p>
