--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12080130.md#1" title="遭央视谩骂的第二个美国人 班农说了啥？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1132789872-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079965.md#1" title="世界新闻日 中共打压新闻自由殃及全球生命""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/04/1920px-Press_freedom_2020.svg_-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/elbl2947/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://elbl2947.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081800.md#1">美国加速与中共经济脱钩 建立新经济圈</a><br>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081777.md#1">【纽约疫情5.4】逾32万例确诊 2.4万多人死亡</a><br>
-:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081572.md#1">【现场视频】陕西小麦遭遇30年来最严重锈病</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080590.md#1">学者：中共在非洲豪赌失败 2千亿投资恐泡汤</a><br>
+:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081800.md#1">美国加速与中共经济脱钩 建立新经济圈</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081777.md#1">【纽约疫情5.4】逾32万例确诊 2.4万多人死亡</a><br>
+:clock8: <em>60分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081572.md#1">【现场视频】陕西小麦遭遇30年来最严重锈病</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080590.md#1">学者：中共在非洲豪赌失败 2千亿投资恐泡汤</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081679.md#1">鳗鱼因忘了人类而胆怯 日本水族馆请你帮忙</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081679.md#1">鳗鱼因忘了人类而胆怯 日本水族馆请你帮忙</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078278.md#1">【一线采访】北京新规 房地产恐面临倒闭潮</a><br>
 <a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078195.md#1">文革重来？湖北刘艳丽因言获罪被判四年</a><br>
