--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -2,17 +2,18 @@
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081951.md#1" target="_blank">【直播】5.4疫情追踪：中国南北爆疫情</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081951.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/Untitled-4-320x200.jpg" align ="left"></a>欢迎收看新唐人、大纪元5月4日的“中共病毒追踪”每日联合直播节目。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 8:49 PM					</td></tr>
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081800.md#1" target="_blank">美国加速与中共经济脱钩 建立新经济圈</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12081800.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1148901571-1-150x120.jpg" align ="left"></a>美国官员透露，川普（特朗普）政府正在进行“全面加速”的计划，将美国工业供应链从中国撤出。据悉川普总统的计划包括：对中国商品课征新关税，对美国回流公司进行税收激励措施、与台湾建立更紧密的关系等。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 8:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078619.md#1" target="_blank">【瘟疫与中共】死亡名单中党员占大多数</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/2/n12078619.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/02/generic-coronavirus-cdc-1-150x120.jpg" align ="left"></a>2019年底从武汉传出的中共病毒（新冠病毒，COVID-19），在中共的隐瞒下，如今已扩散至世界各国，演变为席卷全球的大瘟疫。无数人被病毒感染、病亡，给家庭和社会带来深重的创伤和恐慌。不过，从中国大陆传出在疫情中死亡的名单，揭示出了中共病毒的真正“靶点”，给深陷危机的各国民众带来警示。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 7:26 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079010.md#1" target="_blank">【最新疫情5·4】川普：世卫是一场灾难</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079010.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QZ0VH-150x120.jpg" align ="left"></a>5月4日全球中共病毒（武汉肺炎）疫情最新情况：
+<tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079010.md#1" target="_blank">【最新疫情5·4】姆钦：国际旅行今年很难恢复</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/3/n12079010.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QV79P-150x120.jpg" align ="left"></a>5月4日全球中共病毒（武汉肺炎）疫情最新情况：
 
 中共肺炎全球疫情及美国疫情大数据请点击这里。
 要点：
+姆钦：“很难说”国际旅行今年是否恢复
 新增病例及死亡数降至低位 西班牙开始重开
 俄新增确诊再破万 总数超14.5万
 川普：美死亡人数或升至9万
 川普政府力推全球供应链从中国撤离
 川普：世卫是一场灾难
 蓬佩奥：中共故意隐瞒疫情严重性
-美确诊人数上升2.3% 低于一周平均水平.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 4:17 PM							</td></tr>
+美.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 4:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080777.md#1" target="_blank">川普：中共犯了一个可怕错误 还不想承认</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080777.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QZ0VE-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周日（5月3日）表示，他认为中国（中共）犯的一个“错误”，是冠状病毒（中共病毒）大流行蔓延的原因。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 12:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/3/25/n11974313.md#1" target="_blank">【思想领袖】章家敦：瘟疫加快中共垮台</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/3/25/n11974313.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/021200x800-150x120.jpg" align ="left"></a>中共病毒揭示了中共政权的当务之急是什么？美国在华公司处境如何？这些又是如何同中共政权在美国的大外宣运作联系到一起的？这里是美国思想领袖节目......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 11:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080606.md#1" target="_blank">公安部洗牌 港警丑闻曝光 牵出国安级爆料</a><br></h3><a href="https://github.com/elbl2947/djy/blob/master/gb/20/5/4/n12080606.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/photo6057488528885000562_gray-150x120.jpg" align ="left"></a>4月下旬以来，有关香港警队及中共公安部异动消息频传，看似杂乱，却有内在联系。4月30日警务处处长“一哥”邓炳强强制取消长洲太平清醮的抗疫送神仪式被非议；警务处助理处长陶辉因违规入住“牌照房”被查，5月2日再被指涉嫌霸占官地，僭建民宿招租；4月29日包括陶辉在内的英籍警官被指控是警暴“要犯”，港警后台北京政法系统正被整肃。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月04日 10:34 AM							</td></tr>
