--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -3,7 +3,7 @@
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12082325.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1211673876-320x200.jpg" align ="left"></a><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12082325.md#1" target="_blank">川普：1月23日 我是唯一主张对中国封关的人</a><br></h3>川普（特朗普）总统周日（5月3日）表示，当其他人还在质疑中共病毒（......<br><img align="bottom" src="https://raw.githubusercontent.com/tacn272/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12081926.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-6827935861-320x200.jpg" align ="left"></a><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12081926.md#1" target="_blank">【瘟疫与中共】拥抱一带一路 土耳其疫情急升</a><br></h3>但随着与中国贸易合作越来越多，土耳其官方越来越不敢招惹中共。201......<br><img align="bottom" src="https://raw.githubusercontent.com/tacn272/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12082045.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/1beca246836bbc9c09a828efa4fe93c3-320x200.jpg" align ="left"></a><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12082045.md#1" target="_blank">美邀台等19国空军视讯防疫 立委：共军要崩溃了</a><br></h3>美国太平洋空军司令布朗（CQ Brown Jr.）4月29日主持视......<br><img align="bottom" src="https://raw.githubusercontent.com/tacn272/www/master/t/ntdtv/time.gif">05月05日</td></tr>
-<tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12082462.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-951729884-320x200.jpg" align ="left"></a><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12082462.md#1" target="_blank">分析：金正恩“装死”为找叛徒 或清洗异己</a><br></h3>朝鲜领导人金正恩“死而复生”，外界对此议论纷纷，西方媒体的资深记者......<br><img align="bottom" src="https://raw.githubusercontent.com/tacn272/www/master/t/ntdtv/time.gif">05月05日</td></tr>
+<tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12082462.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-951729884-320x200.jpg" align ="left"></a><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12082462.md#1" target="_blank">外媒：金正恩“装死”为找叛徒 或清洗异己</a><br></h3>朝鲜领导人金正恩“死而复生”，外界对此议论纷纷，西方媒体的资深记者......<br><img align="bottom" src="https://raw.githubusercontent.com/tacn272/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12082439.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/45-320x200.jpg" align ="left"></a><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12082439.md#1" target="_blank">湖南常德政府逼迁 恶意施工将民房震成危楼</a><br></h3>湖南常德市武陵区政府以“棚户改造”为名义对当地穿紫河街道的部分房屋......<br><img align="bottom" src="https://raw.githubusercontent.com/tacn272/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12081986.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/02/n95-mask_1627741090-320x200.jpg" align ="left"></a><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12081986.md#1" target="_blank">低质N95口罩渗透美供应链 多与中国制造有关</a><br></h3>《华尔街日报》报导，美国监管机构和州官员发现大量进口的N95口罩未......<br><img align="bottom" src="https://raw.githubusercontent.com/tacn272/www/master/t/ntdtv/time.gif">05月04日</td></tr>
 <tr><td><h3><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12080750.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2019/10/15cca8220afaeeb6_ttl7dayZtN_Bannon-320x200.png" align ="left"></a><a href="https://github.com/tacn272/djy/blob/master/gb/20/5/4/n12080750.md#1" target="_blank">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
