--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -6,7 +6,6 @@
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082779.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-169769989-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082779.md#1" target="_blank">自曝有抗体后出关 麦当娜参加好友生日会挨轰</a><br></h3>61岁的美国“流行天后”麦当娜·西科尼（Madonna Cicco......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082825.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/03/f4568f041dda9a63145724782ba54789-1-1-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082825.md#1" target="_blank">疫情下 中共国企连续从港交所退市</a><br></h3>今年中共肺炎疫情爆发以来，多家中共国企已经或计划从港交所退市。有分......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082082.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/18b28c0d739395fde2e81fde0448027b-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082082.md#1" target="_blank">【纪元播报】抗疫良方：加人突遇事故 神奇恢复</a><br></h3>在目前这个全球流行瘟疫的时期，人最好别跟医院打交道。但是，谁也不知......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
-<tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082651.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/Unknown-600x400-1-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082651.md#1" target="_blank">【新闻看点】战狼蠢动 川普蓬佩奥再提惩罚追责</a><br></h3>从最初在中国武汉发现疫情到现在，已经5个月了，目前世界上已经初步形......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081813.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1207141244-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081813.md#1" target="_blank">【瘟疫与中共】西班牙染疫深重的背后原因</a><br></h3>大纪元特稿“越亲中共疫情越重 防疫有良方”一文指出，“这次中共病毒......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082574.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-607540788-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082574.md#1" target="_blank">IG用英文勉励网友 范冰冰微博异样噤声</a><br></h3>两年前卷入逃税风波的大陆女星范冰冰，不仅幕前尚未复出，而且网上直播......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082688.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/WhatsApp-Image-2020-05-04-at-3.42.09-AM-320x200.jpeg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082688.md#1" target="_blank">【有冇搞错】中共元老被软禁？</a><br></h3>号称“邓朴方公开信”中，透露当局软禁了“一批老同志”，这个内容最为......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
@@ -17,7 +16,7 @@
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082210.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/1846358b72337da3e83def50cc784275-320x200.png" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082210.md#1" target="_blank">【现场视频】哈尔滨街道、超市空荡荡</a><br></h3>依兰县所有饭店关门。哈尔滨市的商城、超市冷清；街道空空荡荡、居民小......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082325.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1211673876-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082325.md#1" target="_blank">川普：1月23日 我是唯一主张对中国封关的人</a><br></h3>川普（特朗普）总统周日（5月3日）表示，当其他人还在质疑中共病毒（......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081926.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-6827935861-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081926.md#1" target="_blank">【瘟疫与中共】拥抱一带一路 土耳其疫情急升</a><br></h3>但随着与中国贸易合作越来越多，土耳其官方越来越不敢招惹中共。201......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
-<tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082045.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/1beca246836bbc9c09a828efa4fe93c3-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082045.md#1" target="_blank">美邀台等19国空军视讯防疫 立委：共军要崩溃了</a><br></h3>美国太平洋空军司令布朗（CQ Brown Jr.）4月29日主持视......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
+<tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082045.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/1beca246836bbc9c09a828efa4fe93c3-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082045.md#1" target="_blank">美号召19国空军视讯防疫 台湾在列</a><br></h3>美国太平洋空军司令布朗（CQ Brown Jr.）4月29日主持视......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082462.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-951729884-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082462.md#1" target="_blank">外媒：金正恩“装死”为找叛徒 或清洗异己</a><br></h3>朝鲜领导人金正恩“死而复生”，外界对此议论纷纷，西方媒体的资深记者......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082439.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/45-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082439.md#1" target="_blank">湖南常德政府逼迁 恶意施工将民房震成危楼</a><br></h3>湖南常德市武陵区政府以“棚户改造”为名义对当地穿紫河街道的部分房屋......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月05日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081986.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/02/n95-mask_1627741090-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081986.md#1" target="_blank">低质N95口罩渗透美供应链 多与中国制造有关</a><br></h3>《华尔街日报》报导，美国监管机构和州官员发现大量进口的N95口罩未......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月04日</td></tr>
@@ -31,5 +30,6 @@
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/1/n12076321.md#1" target="_blank"><img width="220" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/1/n12076321.md#1" target="_blank">四川什邡市政法委员何渝恶行 海外曝光</a><br></h3>什邡市政府前副市长、市委政法委委员何渝在其任职期间参与迫害法轮功......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月04日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081498.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/64e345e5d81d11e9c84b45d42b858b14-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081498.md#1" target="_blank">【纪元播报】英政界多名政客为中共效力 面临调查</a><br></h3>英国政府调查中资公司企图收购芯片企业一事，却牵出了英国政坛的更深黑......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月04日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081933.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/ac3a45195789ad407ac0452fa4c8ce7f-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081933.md#1" target="_blank">【纪元播报】白宫防疫专家：中共有责任公开疫情</a><br></h3>中共病毒（武汉肺炎）从去年底即开始在中国人传人，然而即使到了2月中......<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月04日</td></tr>
+<tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081951.md#1" target="_blank"><img width="220" src="https://i.epochtimes.com/assets/uploads/2020/05/download-12-320x200.jpg" align ="left"></a><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081951.md#1" target="_blank">【直播回放】5.4疫情追踪：中国南北爆疫情</a><br></h3>欢迎收看新唐人、大纪元5月4日的“中共病毒追踪”每日联合直播节目。...<br><img align="bottom" src="https://raw.githubusercontent.com/eyk232/www/master/t/ntdtv/time.gif">05月04日</td></tr>
 <tr><td><h3><a href="https://github.com/eyk232/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/eyk232/djy/blob/master/gb/nsc413_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/eyk232/djy/blob/master/gb/nsc413.md#1<br><a href="https://github.com/eyk232/djy/blob/master/gb/nsc413.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/eyk232/djy/blob/master/gb/nsc413.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc413.htm">https://www.epochtimes.com/gb/nsc413.htm</a>    （国内需<a href="https://github.com/eyk232/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</p>
